Edited MA 11 translation and fixed daisy chain SA 2.

--- a/01_agama/madhyama/MA_011.md
+++ b/01_agama/madhyama/MA_011.md
@@ -10,87 +10,90 @@ next: MA_016.html
 ## Chapter 2: Related to Action
 ### 11. The Rock Salt Parable
 
-1\. Thus I have heard: One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada’s Park in Jeta’s Grove.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “It’s according to the actions that a person does that they receive their rewards. Thus, one who doesn’t practice the religious life will not attain the end of suffering. Suppose someone says, ‘It’s according to the actions that a person does that they receive their rewards.’ Thus, cultivating the religious life leads to the end of suffering.
+2\. It was then that the Bhagavān addressed the monks, “According to the deeds that they perform, a person receives their rewards. Thus, not practicing the religious life doesn’t attain the end of suffering. Suppose someone says, ‘According to the deeds that they perform, a person receives their rewards.’ Thus, cultivating the religious attains the end of suffering.
 {:#p2}
 
 #### The Parable of the Salt Rocks
 
-3\. “Why is that? Suppose someone commits an action that’s not good and surely will receive a painful result, the reward of Hell. How does a person commit an action that’s not good and will surely receive a painful result, the reward of Hell? It means that this person hasn’t cultivated themselves. They haven’t cultivated the precepts, haven’t cultivated their mind, and haven’t cultivated wisdom. Their life span will be quite short. This is called a person who commits an action that’s not good and will surely receive a painful result, the reward of Hell.
+3\. “Why is that? Suppose someone performs a deed that’s not good and will surely receive a painful result, the reward of Hell. How does a person perform a deed that’s not good and will surely receive a painful result, the reward of Hell? It means that this person hasn’t cultivated themselves. They haven’t cultivated the precepts, haven’t cultivated their mind, and haven’t cultivated wisdom. Their life span will be very short. This is called a person who performs a deed that’s not good and will surely receive a painful result, the reward of Hell.
 {:#p3}
 
-4\. “It’s like when a person tosses a couple rocks of salt into a little water wanting to make the water too salty to drink. What do you think? Can those rocks of salt make the water too salty to drink?”
+4\. “It’s like a person who tosses a couple rocks of salt into a little water wanting to make the water too salty to drink. What do you think? Can those salt rocks make the water too salty to drink?”
 {:#p4}
 
-5\. The monks answered, “So it is, Bhagavān. Why is that? Those rocks of salt are much, and the water is little, so they can make the water too salty to drink.”
+5\. The monks answered, “Yes, Bhagavān. Why is that? Those salt rocks are much, and the water is little, so they can make the water too salty to drink.”
 {:#p5}
 
-6\. “Thus, someone commits an action that’s not good and surely will receive a painful result, the reward of Hell. How does a person commit an action that’s not good and will surely receive a painful result, the reward of Hell? It means that this person hasn’t cultivated themselves. They haven’t cultivated the precepts, haven’t cultivated their mind, and haven’t cultivated wisdom. Their life span will be quite short. This is called a person who commits an action that’s not good and will surely receive a painful result, the reward of Hell.
+6\. “Thus is someone who performs a deed that’s not good and will surely receive a painful result, the reward of Hell. How does a person perform a deed that’s not good and will surely receive a painful result, the reward of Hell? It means that this person hasn’t cultivated themselves. They haven’t cultivated the precepts, haven’t cultivated their mind, and haven’t cultivated wisdom. Their life span will be very short. This is called a person who performs a deed that’s not good and will surely receive a painful result, the reward of Hell.
 {:#p6}
 
-7\. “Furthermore, [433b] someone commits an action that’s not good and will surely receive a painful result, a reward in the present. How does a person commit an action that’s not good and will surely receive a painful result, a reward in the present? It means that this person has cultivated themselves. They have cultivated the precepts, cultivated their mind, and cultivated wisdom. Their life span will be quite long. This is called a person who commits an action that’s not good and will surely receive a painful result, a reward in the present.
+7\. “Furthermore, someone performs a deed that’s not good and will surely receive a painful result, a reward in the present life. How does a person perform a deed that’s not good and will surely receive a painful result, a reward in the present life? It means that this person has cultivated themselves. They have cultivated the precepts, cultivated their mind, and cultivated wisdom. Their life span will be very long. This is called a person who performs a deed that’s not good and will surely receive a painful result, a reward in the present life.
 {:#p7}
 
-8\. “It’s like when a person tosses a couple rocks of salt into the Gaṅgā River wanting to make the water too salty to drink. What do you think? Can those rocks of salt make the Gaṅgā River too salty to drink?”
+8\. “It’s like a person who tosses a couple rocks of salt into the Gaṅgā River wanting to make the water too salty to drink. What do you think? Can those salt rocks make the Gaṅgā River too salty to drink?”
 {:#p8}
 
 9\. The monks answered, “No, Bhagavān. Why is that? The Gaṅgā River is large, and a couple rocks of salt are little, so they cannot make it too salty to drink.”
 {:#p9}
 
-10\. “Thus, someone commits an action that’s not good and will surely receive a painful result, a reward in the present. How does a person commit an action that’s not good and will surely receive a painful result, a reward in the present? It means that this person has cultivated themselves. They have cultivated the precepts, cultivated their mind, and cultivated wisdom. Their life span will be quite long. This is called a person who commits an action that’s not good and will surely receive a painful result, a reward in the present.
+10\. “Thus is someone who performs a deed that’s not good and will surely receive a painful result, a reward in the present life. How does a person perform a deed that’s not good and will surely receive a painful result, a reward in the present life? It means that this person has cultivated themselves. They have cultivated the precepts, cultivated their mind, and cultivated wisdom. Their life span will be very long. This is called a person who performs a deed that’s not good and will surely receive a painful result, a reward in the present life.
 {:#p10}
 
 #### The Parable of the Sheep Thief
 
-11\. “Furthermore, someone commits an action that’s not good and surely will receive a painful result, the reward of Hell. How does a person commit an action that’s not good and will surely receive a painful result, the reward of Hell? It means that this person hasn’t cultivated themselves. They haven’t cultivated the precepts, haven’t cultivated their mind, and haven’t cultivated wisdom. Their life span will be quite short. This is called a person who commits an action that’s not good and will surely receive a painful result, the reward of Hell.
+11\. “Furthermore, someone performs a deed that’s not good and will surely receive a painful result, the reward of Hell. How does a person perform a deed that’s not good and will surely receive a painful result, the reward of Hell? It means that this person hasn’t cultivated themselves. They haven’t cultivated the precepts, haven’t cultivated their mind, and haven’t cultivated wisdom. Their life span will be very short. This is called a person who performs a deed that’s not good and will surely receive a painful result, the reward of Hell.
 {:#p11}
 
-12\. “It’s like a person who steals another’s sheep. How does someone steal another’s sheep? It means that the sheep thief is either a king or a king’s minister who is powerful, and the sheep owner is poor and powerless. Because they are powerless, the owner looks hopeful in various ways, even folding their hands and seeking to inquire. They say, ‘Good man, could you see that the sheep return or see that they are given back?’ This is called someone who steals another’s sheep.
+12\. “It’s like someone who steals another person’s sheep. How does someone steal another person’s sheep? It means that the sheep thief is a king or a king’s official who’s powerful, and the sheep owner is poor and powerless. Because they’re powerless, the owner looks hopefully in various ways, even folding their hands and seeking to inquire. They say, ‘Good man, could you let the sheep return or given them back directly?’ This is what’s meant by someone who steals another person’s sheep.
 {:#p12}
 
-13\. “Thus, someone commits an action that’s not good and surely will receive a painful result, the reward of Hell. How does a person commit an action that’s not good and will surely receive a painful result, the reward of Hell? It means that this person hasn’t cultivated themselves. They haven’t cultivated the precepts, haven’t cultivated their mind, and haven’t cultivated wisdom. Their life span will be quite short. This is called a person who commits an action that’s not good and will surely receive a painful result, the reward of Hell.
+13\. “Thus is someone who performs a deed that’s not good and will surely receive a painful result, the reward of Hell. How does a person perform a deed that’s not good and will surely receive a painful result, the reward of Hell? It means that this person hasn’t cultivated themselves. They haven’t cultivated the precepts, haven’t cultivated their mind, and haven’t cultivated wisdom. Their life span will be very short. This is called a person who performs a deed that’s not good and will surely receive a painful result, the reward of Hell.
 {:#p13}
 
-14\. “Furthermore, someone commits an action that’s not good and will surely receive a painful result, a reward in the present. How does a person commit an action that’s not good and will surely receive a painful result, a reward in the present? It means that this person has cultivated themselves. They have cultivated the precepts, cultivated their mind, and cultivated wisdom. Their life span will be quite long. This is called a person who commits an action that’s not good and will surely receive a painful result, a reward in the present.
+14\. “Furthermore, someone performs a deed that’s not good and will surely receive a painful result, a reward in the present life. How does a person perform a deed that’s not good and will surely receive a painful result, a reward in the present life? It means that this person has cultivated themselves. They have cultivated the precepts, cultivated their mind, and cultivated wisdom. Their life span will be very long. This is called a person who performs a deed that’s not good and will surely receive a painful result, a reward in the present life.
 {:#p14}
 
-15\. “It’s like [433c] a person who steals another’s sheep, but the owner returns and takes them back. How does a person steal another’s sheep, but the owner returns and takes them back? It means that the sheep thief is poor and powerless, and the sheep owner is a king or king’s minister who is powerful. Because they’re powerful, the owner can arrest the thief and take back their sheep. This is called a person who steals another’s sheep, but the owner returns and takes them back.
+15\. “It’s like someone who steals another person’s sheep, but the owner returns and takes them back. How does someone steal another person’s sheep, but the owner returns and takes them back? It means that the sheep thief is poor and powerless, and the sheep owner is a king or king’s official who is powerful. Because they’re powerful, the owner can arrest the thief and take back the sheep. This is what’s meant by someone who steals another person’s sheep, but the owner returns and takes them back.
 {:#p15}
 
-16\. “Thus, someone commits an action that’s not good and will surely receive a painful result, a reward in the present. How does a person commit an action that’s not good and will surely receive a painful result, a reward in the present? It means that this person has cultivated themselves. They have cultivated the precepts, cultivated their mind, and cultivated wisdom. Their life span will be quite long. This is called a person who commits an action that’s not good and will surely receive a painful result, a reward in the present.
+16\. “Thus is someone who performs a deed that’s not good and will surely receive a painful result, a reward in the present life. How does a person perform a deed that’s not good and will surely receive a painful result, a reward in the present life? It means that this person has cultivated themselves. They have cultivated the precepts, cultivated their mind, and cultivated wisdom. Their life span will be very long. This is called a person who performs a deed that’s not good and will surely receive a painful result, a reward in the present life.
 {:#p16}
 
 #### The Parable of the Debtor
 
-17\. “Furthermore, someone commits an action that’s not good and surely will receive a painful result, the reward of Hell. How does a person commit an action that’s not good and will surely receive a painful result, the reward of Hell? It means that this person hasn’t cultivated themselves. They haven’t cultivated the precepts, haven’t cultivated their mind, and haven’t cultivated wisdom. Their life span will be quite short. This is called a person who commits an action that’s not good and will surely receive a painful result, the reward of Hell.
+17\. “Furthermore, someone performs a deed that’s not good and surely will receive a painful result, the reward of Hell. How does a person perform a deed that’s not good and will surely receive a painful result, the reward of Hell? It means that this person hasn’t cultivated themselves. They haven’t cultivated the precepts, haven’t cultivated their mind, and haven’t cultivated wisdom. Their life span will be very short. This is called a person who performs a deed that’s not good and will surely receive a painful result, the reward of Hell.
 {:#p17}
 
-18\. “It’s like when a person owes five coins to another, and they are arrested by that creditor. Even if it were just one coin, they still would be arrested by that creditor. How is it that a person who owes five coins to another is arrested by that creditor, and even if it were just one coin, they still would be arrested by that creditor? It means this debtor is poor and powerless. Because they are powerless and owe five coins to another, they’re arrested by that creditor, and even if it were just one coin, they still would be arrested by that creditor. This is called a person who owes five coins to another and is arrested by that creditor, and even if it were just one coin, they still would be arrested by that creditor.
+18\. “It’s like someone who owes five coins to another person, and they are arrested by that creditor. Even if it were just one coin, they would be arrested by that creditor. How is it that someone who owes five coins to another person is arrested by that creditor, and they would be arrested by that creditor even if it were just one coin? It means this debtor is poor and powerless. Because they are poor and powerless, someone who owes five coins is arrested by that creditor. Even if it were just one coin, they would be arrested by that creditor. This is what’s meant by someone who owes five coins to another person and is arrested by that creditor. Even if it were just one coin, they would be arrested by that creditor.
 {:#p18}
 
-19\. “Thus, someone commits an action that’s not good and surely will receive a painful result, the reward of Hell. How does a person commit an action that’s not good and will surely receive a painful result, the reward of Hell? It means that this person hasn’t cultivated themselves. They haven’t cultivated the precepts, haven’t cultivated their mind, and haven’t cultivated wisdom. Their life span will be quite short. This is called a person who commits an action that’s not good and will surely receive a painful result, the reward of Hell.
+19\. “Thus is someone who performs a deed that’s not good and will surely receive a painful result, the reward of Hell. How does a person perform a deed that’s not good and will surely receive a painful result, the reward of Hell? It means that this person hasn’t cultivated themselves. They haven’t cultivated the precepts, haven’t cultivated their mind, and haven’t cultivated wisdom. Their life span will be very short. This is called a person who performs a deed that’s not good and will surely receive a painful result, the reward of Hell.
 {:#p19}
 
-20\. “Furthermore, someone commits an action that’s not good and will surely receive a painful result, a reward in the present. How does a person commit an action that’s not good and will surely receive a painful result, a reward in the present? It means that this person has cultivated themselves. They have cultivated the precepts, cultivated their mind, and cultivated wisdom. Their life span will be quite long. This is called a person who commits an action that’s not good and will surely receive a painful result, a reward in the present.
+20\. “Furthermore, someone performs a deed that’s not good and will surely receive a painful result, a reward in the present life. How does a person perform a deed that’s not good and will surely receive a painful result, a reward in the present? It means that this person has cultivated themselves. They have cultivated the precepts, cultivated their mind, and cultivated wisdom. Their life span will be very long. This is called a person who performs a deed that’s not good and will surely receive a painful result, a reward in the present life.
 {:#p20}
 
-21\. “It’s like a person who owes 100 coins but isn’t arrested by the creditor, and even if it were 1,000 or 10,000, they still wouldn’t be arrested by the creditor. How does a person owe 100 coins but isn’t arrested by the creditor, and even if it were 1,000 or 10,000, they still aren’t [434a] arrested by the creditor? It means that the debtor has measureless assets and a great deal of power. Because of this, they aren’t arrested by the creditor even though they owe 100 coins. Even if it were 1,000 or 10,000, they still wouldn’t be arrested by the creditor. This is called a person who owes 100 coins but isn’t arrested by the creditor, and even if it were 1,000 or 10,000, they still wouldn’t be arrested by the creditor.
+21\. “It’s like someone who owes 100 coins but isn’t arrested by the creditor. Even if it were 1,000 or 10,000, they still wouldn’t be arrested by the creditor. How does someone owe 100 coins but isn’t arrested by the creditor, and they aren’t arrested by the creditor even if it were 1,000 or 10,000? It means that the debtor has measureless assets and is powerful. They therefore aren’t arrested by the creditor even though they owe 100 coins. Even if it were 1,000 or 10,000, they wouldn’t be arrested by the creditor. This is what’s meant by someone who owes 100 coins but isn’t arrested by the creditor. Even if it were 1,000 or 10,000, they wouldn’t be arrested by the creditor.
 {:#p21}
 
-22\. “Thus, someone commits an action that’s not good and will surely receive a painful result, a reward in the present. How does a person commit an action that’s not good and will surely receive a painful result, a reward in the present? It means that this person has cultivated themselves. They have cultivated the precepts, cultivated their mind, and cultivated wisdom. Their life span will be quite long. This is called a person who commits an action that’s not good and will surely receive a painful result, a reward in the present. In the present life, if he receives the rewards of good and bad actions, they will be slight.”
+22\. “Thus is someone who performs a deed that’s not good and will surely receive a painful result, a reward in the present life. How does a person perform a deed that’s not good and will surely receive a painful result, a reward in the present life? It means that this person has cultivated themselves. They have cultivated the precepts, cultivated their mind, and cultivated wisdom. Their life span will be very long. This is called a person who performs a deed that’s not good and will surely receive a painful result, a reward in the present life. In the present life, if he receives the rewards of good and bad actions, they will be slight.”
 {:#p22}
 
-23\. The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and approved.
+23\. Thus did the Buddha speak. Those monks who heard what the Buddha taught rejoiced and approved.
 {:#p23}
 
+### Notes
+
+1. {:#n1} The direct parallel for this sutra is [AN 3.100](https://suttacentral.net/an3.100){: target="_blank"}. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 September 2020
+Last Revised: 17 August 2021
 {: .revised}
 
 ---
