--- a/01_agama/madhyama/MA_016.md
+++ b/01_agama/madhyama/MA_016.md
@@ -10,7 +10,7 @@ next: MA_017.html
 ## Chapter 2: Related to Action
 ### 16. The Kālāmas
 
-1\. Thus I have heard: One time, the Buddha traveled to the country of Kālāma accompanied by a great assembly of monks. He went to [Kesaputta] and stayed in the rosewood grove to the north.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to the country of Kālāma accompanied by a great assembly of monks. He went to [Kesaputta] and stayed in the rosewood grove to the north.
 {:#p1}
 
 2\. It was then that the Kālāma people of [Kesaputta] heard that the ascetic Gautama from the Śākya clan had renounced the Śākya dynasty, left home, and trained on the path. He had traveled to Kālāma and arrived at [Kesaputta] with a great assembly of monks and was staying in the rosewood grove to the north. That ascetic Gautama had a great reputation that was widely heard in ten directions: “The ascetic Gautama is the Tathāgata, Arhat, and Fully Awakened One who’s accomplished in knowledge and conduct, well gone, an understander of the world, an unsurpassed man, a trainer in the principles of the path, a teacher to gods and humans, and called the Buddha, the Blessed One. Among the gods, Māra, Brahmā, ascetics, and priests of this world, from humans up to the gods, his own knowledge and awakening was accomplished by self-realization. When he teaches the Dharma, it’s good in the beginning, middle, and end, both its meaning and words are complete and pure, and it demonstrates the religious practice. If someone meets the Tathāgata, Arhat, and Fully Awakened One and honors, venerates, makes offerings, and serves him, they will quickly attain good benefits. We should go together to see the ascetic Gautama to honor, serve, and make offerings to him.”
@@ -108,6 +108,10 @@ next: MA_017.html
 
 33\. The Buddha spoke thus. All the Kālāma people and the monks who heard what the Buddha taught rejoiced and approved.
 {:#p33}
+
+### Notes
+
+1. {:#n1} The direct parallel for this sutra is [AN 3.100](https://suttacentral.net/an3.100){: target="_blank"}. [\[back\]](#ref1)
 
 ---
 
