--- a/01_agama/samyukta/02/SA2_129.md
+++ b/01_agama/samyukta/02/SA2_129.md
@@ -17,7 +17,7 @@ next: SA2_130.html
 2\. It was then that the Bhagavān addressed the monks, “I don’t say that the world has an end to which I person can travel, nor do I say that there’s an ultimate end of suffering to someone who doesn’t travel to the end of the world.” After saying this, he went into his dwelling to sit in meditation.
 {: #p2}
 
-3\. A group of monks then discussed it after the Bhagavān was gone: “The Bhagavān only gave this brief teaching: ‘I don’t say that the world has an end to which I person can travel, nor do I say that there’s an ultimate end of suffering to someone who doesn’t travel to the end of the world.’ After saying this, he went into his dwelling to sit in meditation. We’ve yet to understand the meaning of the Bhagavān’s brief teaching. Who among the venerable ones is capable of explaining for us the meaning of the Bhagavān’s brief teaching?”
+3\. A group of monks then discussed it after the Bhagavān was gone: “The Bhagavān only gave this brief teaching: ‘I don’t say that the world has an end to which a person can travel, nor do I say that there’s an ultimate end of suffering to someone who doesn’t travel to the end of the world.’ After saying this, he went into his dwelling to sit in meditation. We’ve yet to understand the meaning of the Bhagavān’s brief teaching. Who among the venerable ones is capable of explaining for us the meaning of the Bhagavān’s brief teaching?”
 {: #p3}
 
 4\. Again, they said, “There’s only Venerable Ānanda. He’s wise, has a complete memory, and always attends to the Bhagavān, right and left. The Bhagavān praises him as a well-versed religious practitioner. He’s capable of explaining for us the meaning of the Bhagavān’s brief teaching. Let’s go now to Venerable Ānanda and request that he explain it.”
