--- a/01_agama/samyukta/11/SA11_58.md
+++ b/01_agama/samyukta/11/SA11_58.md
@@ -4,7 +4,7 @@ title: 'The Related Discourses | 11. Powers | 58. Ten Powers'
 type: kramdown
 base: ../../../
 previous: SA11_41.html
-next: ../../../03_samyukta/SA_12/index.html
+next: ../12/index.html
 ---
 
 # [The Related Discourses](../index.html)
