--- a/01_agama/samyukta/13/SA13_6.md
+++ b/01_agama/samyukta/13/SA13_6.md
@@ -11,20 +11,20 @@ next: SA13_7.html
 ## [13. Factors of the Noble Path](index.html)
 ### 6. Immortality
 
-1. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2. There was then a monk named Ariṣṭa who went to the Buddha, prostrated at his feet, and withdrew to sit at one side. He said to the Buddha, “Bhagavān, there’s the expression ‘immortal.’[\[2\]](#n1){:#ref2} What is it that’s called ‘immortal’?”
+2\. There was then a monk named Ariṣṭa who went to the Buddha, prostrated at his feet, and withdrew to sit at one side. He said to the Buddha, “Bhagavān, there’s the expression ‘immortal.’[\[2\]](#n1){:#ref2} What is it that’s called ‘immortal’?”
 {:#p2}
 
 Buddha told Ariṣṭa, “’Immortal’ is the name of a realm, but I take it to be the end of the contaminants of existence. That’s a clear explanation of this name.”
 
-3. The monk Ariṣṭa said to the Buddha, “Bhagavān, isn’t there a path and steps to attaining immortality when they are cultivated and cultivated often?”
+3\. The monk Ariṣṭa said to the Buddha, “Bhagavān, isn’t there a path and steps to attaining immortality when they are cultivated and cultivated often?”
 {:#p3}
 
 The Buddha addressed the monk, “There is. It’s known as the noble eightfold path, which is right view … right concentration.”
 
-4. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
+4\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p4}
 
 ### Notes
