--- a/01_agama/samyukta/13/SA13_24.md
+++ b/01_agama/samyukta/13/SA13_24.md
@@ -45,7 +45,7 @@ The wise man rides a war chariot\\
 That defeats the foe of ignorance.”
 
 ### Notes
-1. {:#n1}This sutra is parallel to [*SN* 45.4](https://suttacentral.net/sn45.4){target="_blank"}. The Chinese has fewer verses, but they correspond to the first three stanzas in the Pali. [\[back\]](#ref1)
+1. {:#n1}This sutra is parallel to [*SN* 45.4](https://suttacentral.net/sn45.4){:target="_blank"}. The Chinese has fewer verses, but they correspond to the first three stanzas in the Pali. [\[back\]](#ref1)
 2. {:#n2}Guṇabhadra translates his name as “Giving Rise to Hearing,” which would seem to interpret a Sanskrit name like Jānuśṛṇoti. I’ve used the Pali form for now until I find a Sanskrit attestation. [\[back\]](#ref2)
 
 ---
