Changed some sutra endings to "approved" from "handed it down" and converted a few sutras to kramdown that had been overlooked.

--- a/01_agama/samyukta/13/SA13_12.md
+++ b/01_agama/samyukta/13/SA13_12.md
@@ -26,7 +26,7 @@ next: SA13_13.html
 5\. The Buddha told the monks, “They are the noble eightfold path and right view, right intention, right speech, right action, right livelihood, right effort, right mindfulness, and right concentration.”
 {:#p5}
 
-6\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and handed it down.
+6\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and approved.
 {:#p6}
 
 ### Notes
