--- a/01_agama/samyukta/13/SA13_13.md
+++ b/01_agama/samyukta/13/SA13_13.md
@@ -23,7 +23,7 @@ next: SA13_14.html
 4\. The Buddha told the monks, “There is a path and steps that put an end to these three things that are disagreeable, unattractive, and immemorable when cultivated and cultivated often. What is that path and those steps that put an end to these three things that are disagreeable, unattractive, and immemorable when cultivated and cultivated often? It’s the noble eightfold path and right view, right intention, right speech, right action, right effort, right mindfulness, and right concentration.”
 {:#p4}
 
-5\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and handed it down.
+5\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and approved.
 {:#p5}
 
 ### Notes
