--- a/01_agama/samyukta/13/SA13_14.md
+++ b/01_agama/samyukta/13/SA13_14.md
@@ -17,7 +17,7 @@ next: SA13_15.html
 2\. At that time, the Bhagavān addressed the monks, “I will explain the trainee and non-trainee. Listen closely and well consider it. What is a trainee? It means a trainee’s accomplishment of right view and a trainee’s accomplishment of right intention, right speech, right action, right effort, right mindfulness, and right concentration. This is called a trainee. What is a non-trainee? It means a non-trainee’s accomplishment of right view and a non-trainee’s accomplishment of right intention, right speech, right action, right effort, right mindfulness, and right concentration. This is called a non-trainee.”
 {:#p2}
 
-3\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and handed it down.
+3\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and approved.
 {:#p3}
 
 ### Notes
