--- a/01_agama/samyukta/13/SA13_15.md
+++ b/01_agama/samyukta/13/SA13_15.md
@@ -17,7 +17,7 @@ next: SA13_16.html
 2\. At that time, the Bhagavān addressed the monks, “I will explain the correct man and the great man.[\[2\]](#n1){:#ref2} Listen closely and well consider it. What is a correct man? It means a correct man’s accomplishment of right view and a correct man’s accomplishment of right intention, right speech, right action, right effort, right mindfulness, and right concentration. This is called a correct man. What is the great man? It means the great man’s accomplishment of right view and a great man’s accomplishment of right intention, right speech, right action, right effort, right mindfulness, and right concentration. This is called a great man.”
 {:#p2}
 
-3\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and handed it down.
+3\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and approved.
 {:#p3}
 
 ### Notes
