--- a/01_agama/samyukta/13/SA13_16.md
+++ b/01_agama/samyukta/13/SA13_16.md
@@ -17,7 +17,7 @@ next: SA13_17.html
 2\. It was then that the Bhagavān addressed the monks, “I will explain the noble end of contaminants. What is the noble end of contaminants? It means the non-trainee’s accomplishment of right view up to the non-trainee’s accomplishment of right concentration. This is called the noble end of contaminants.”
 {:#p2}
 
-3\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and handed it down.
+3\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and approved.
 {:#p3}
 
 ---
