--- a/01_agama/samyukta/13/SA13_17.md
+++ b/01_agama/samyukta/13/SA13_17.md
@@ -17,7 +17,7 @@ next: SA13_18.html
 2\. At that time, the Bhagavān addressed the monks, “Now, I will explain the eight factors of the noble path. What are the eight? They are right view, right intention, right speech, right action, right livelihood, right effort, right mindfulness, and right concentration.”
 {:#p2}
 
-3\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and handed it down.
+3\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and approved.
 {:#p3}
 
 ---
