--- a/01_agama/samyukta/13/SA13_19.md
+++ b/01_agama/samyukta/13/SA13_19.md
@@ -17,7 +17,7 @@ next: SA13_20.html
 2\. It was then that the Bhagavān addressed the monks, “Now, I will explain a monk’s past cultivation of the noble eightfold path and future cultivation of the noble eightfold path.” *And so on [like the previous sutra].*
 {:#p2}
 
-3\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and handed it down.
+3\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and approved.
 {:#p3}
 
 ---
