--- a/01_agama/samyukta/13/SA13_21.md
+++ b/01_agama/samyukta/13/SA13_21.md
@@ -17,7 +17,7 @@ next: SA13_22.html
 2\. It was then that the Bhagavān addressed the monks, Suppose a monk’s right view is pure, cleansed, without fault, and free of afflictions. “When it has yet to happen, it doesn’t happen except by the discipline of the Sugata ... *up to right concentration are likewise described*. Suppose right view is pure, cleansed, without fault, and free of afflictions. When it has yet to happen, it can happen ... *up to right concentration are likewise described*.”
 {:#p2}
 
-3\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and handed it down.
+3\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and approved.
 {:#p3}
 
 ### Notes
