--- a/01_agama/samyukta/13/SA13_22.md
+++ b/01_agama/samyukta/13/SA13_22.md
@@ -20,7 +20,7 @@ next: SA13_23.html
 3\. “The expression ‘wholesome aggregate’ means the noble eightfold path. This is called the correct explanation. What is the reason for that? It is an entirely, fully, and purely wholesome aggregate that’s called the noble eightfold path. What are the eight? They are right view, right intention, right speech, right action, right livelihood, right effort, right mindfulness, and right concentration.”
 {:#p3}
 
-4\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and handed it down.
+4\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and approved.
 {:#p4}
 
 ### Notes
