--- a/01_agama/samyukta/13/SA13_23.md
+++ b/01_agama/samyukta/13/SA13_23.md
@@ -20,7 +20,7 @@ next: SA13_24.html
 3\. *Up to* the Buddha told Ānanda, “The religious practice is entirely, fully, and purely good friends. What is the reason for that? It was because of good friends that I caused sentient beings to cultivate right view, relying on seclusion, having no desire, cessation, and an orientation towards renunciation *up to* cultivate right concentration, relying on seclusion, having no desire, cessation, and an orientation towards renunciation.”
 {:#p3}
 
-4\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and handed it down.
+4\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and approved.
 {:#p4}
 
 ### Notes
