--- a/01_agama/samyukta/13/SA13_18.md
+++ b/01_agama/samyukta/13/SA13_18.md
@@ -20,7 +20,7 @@ next: SA13_19.html
 3\. “What is the cultivation of the noble eightfold path? Here, a monk cultivates right view, relying on seclusion, having no desire, cessation, and an orientation towards renunciation. He cultivates right intention, right speech, right action, right livelihood, right effort, right mindfulness, and right concentration, relying on seclusion, having no desire, cessation, and an orientation towards renunciation. This is called cultivating the noble eightfold path.”
 {:#p3}
 
-4\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and handed it down.
+4\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and approved.
 {:#p4}
 
 ---
