--- a/01_agama/samyukta/13/SA13_26.md
+++ b/01_agama/samyukta/13/SA13_26.md
@@ -11,62 +11,39 @@ next: SA13_27.html
 ## [13. Factors of the Noble Path](index.html)
 ### 26. The Other Shore
 
-<section><p id="en.1-1">Thus have I heard:<sup class="noteref">1</sup> One time, the Buddha stayed in the kingdom of Śrāvastī at Anāthapiṇḍada Park in Jeta Grove.</p>
+1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha stayed in the kingdom of Śrāvastī at Anāthapiṇḍada Park in Jeta Grove.
+{:#p1}
 
+2\. The brahmin Jāṇussoṇi then came to visit the Buddha and exchanged polite greetings and inquires with the Bhagavān. Afterward, he withdrew to sit at one side. He said, “Gautama, there is what is not the other shore and what is the other shore. Gautama, what is not the other shore, and what is the other shore?”
+{:#p2}
 
-</section>
-<section><p id="en.1-2">The brahmin Jāṇussoṇi then came to visit the Buddha and exchanged polite greetings and inquires with the Bhagavān. Afterward, he withdrew to sit at one side. He said, “Gautama, there is what is not the other shore and what is the other shore. Gautama, what is not the other shore, and what is the other shore?”</p>
+3\. The Buddha told the brahmin, “Wrong view is not the other shore, but right view is the other shore. Wrong intention, wrong speech, wrong action, wrong livelihood, wrong effort, wrong mindfulness, and wrong concentration are not the other shore, but right intention, right speech, right action, right livelihood, right effort, right mindfulness, and right concentration are the other shore.”
+{:#p3}
 
+4\. The Bhagavān then spoke in verse:
+{:#p4}
 
-</section>
-<section><p id="en.1-3">The Buddha told the brahmin, “Wrong view is not the other shore, but right view is the other shore. Wrong intention, wrong speech, wrong action, wrong livelihood, wrong effort, wrong mindfulness, and wrong concentration are not the other shore, but right intention, right speech, right action, right livelihood, right effort, right mindfulness, and right concentration are the other shore.”</p>
+* {:.verse}“Rare are the people who can\\
+Cross over to the other shore;\\
+Everyone else in the world\\
+Wander around on this shore.
 
+* {:.verse}Of this right teaching and discipline,\\
+There are some who can follow it;\\
+They are the ones who can cross over\\
+That difficult ford of birth-and-death.”
 
-</section>
-<section><p id="en.1-4">The Bhagavān then spoke in verse:</p>
+5\. The brahmin Jāṇussoṇi then heard what the Buddha had taught, and he rejoiced and was gladdened. He rose from his seat and left.
+{:#p5}
 
+### Notes
+1. {:#n1}This sutra is parallel with [AN 10.117](https://suttacentral.net/an10.117){:target="_blank"}, and <a href="" target="_blank">[<em>SN</em> 45.34</a>](https://suttacentral.net/sn45.34){:target="_blank"} is also a parallel variant in the Pali. [\[back\]](#ref1)
 
-</section>
-<section>
-<ol  id="en.5" start="5" class="verse en">
-<li class="en">
+---
 
-“Rare are the people who can<br/>
+Translator: Charles Patton
+{:.translator}
+Last Revised: 11 August 2019
+{:.revised}
 
-Cross over to the other shore;<br/>
-
-Everyone else in the world<br/>
-
-Wander around on this shore.<br/>
-
-</li>
-</ol>
-
-
-
-</section>
-<section>
-<ol  id="en.6" start="6" class="verse en">
-<li class="en">
-
-Of this right teaching and discipline,<br/>
-
-There are some who can follow it;<br/>
-
-They are the ones who can cross over<br/>
-
-That difficult ford of birth-and-death.”<br/>
-
-</li>
-</ol>
-
-
-
-</section>
-<section><p id="en.1-7">The brahmin Jāṇussoṇi then heard what the Buddha had taught, and he rejoiced and was gladdened. He rose from his seat and left.</p>
-
-
-</section><h2>Endnotes</h2>
-<ol><li>This sutra is parallel with <a href="https://suttacentral.net/an10.117" target="_blank"><em>AN</em> 10.117</a>, and <a href="https://suttacentral.net/sn45.34" target="_blank"><em>SN</em> 45.34</a> is also a parallel variant in the Pali.</li></ol><section class="footer">
-<h5>Translator: Charles Patton<br/>Last Revised: 8-11-2019</h5>
-<hr/>
+---
