--- a/01_agama/samyukta/13/SA13_29.md
+++ b/01_agama/samyukta/13/SA13_29.md
@@ -11,58 +11,37 @@ next: SA13_30.html
 ## [13. Factors of the Noble Path](index.html)
 ### 29. The Other Shore (4)
 
-<section><p id="en.1-1">Thus have I heard:<sup class="noteref">1</sup> One time, the Buddha stayed in the kingdom of Śrāvastī at Anāthapiṇḍada Park in Jeta Grove.</p>
+1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha stayed in the kingdom of Śrāvastī at Anāthapiṇḍada Park in Jeta Grove.
+{:#p1}
 
+2\. It was then that the Buddha addressed the monks, “There is what is not the other shore and what is the other shore. What is not the other shore, and what is the other shore? Wrong view is not the other shore, but right view is the other shore. Wrong intention, wrong speech, wrong action, wrong livelihood, wrong effort, wrong mindfulness, and wrong concentration are not the other shore, but right intention, right speech, right action, right livelihood, right effort, right mindfulness, and right concentration are the other shore.”
+{:#p2}
 
-</section>
-<section><p id="en.1-2">It was then that the Buddha addressed the monks, “There is what is not the other shore and what is the other shore. What is not the other shore, and what is the other shore? Wrong view is not the other shore, but right view is the other shore. Wrong intention, wrong speech, wrong action, wrong livelihood, wrong effort, wrong mindfulness, and wrong concentration are not the other shore, but right intention, right speech, right action, right livelihood, right effort, right mindfulness, and right concentration are the other shore.”</p>
+3\. The Bhagavān then spoke in verse:
+{:#p3}
 
+* {:.verse}“Rare are the people who can\\
+Cross over to the other shore;\\
+Everyone else in the world\\
+Wander around on this shore.
 
-</section>
-<section><p id="en.1-3">The Bhagavān then spoke in verse:</p>
+* {:.verse}Of this right teaching and discipline,\\
+There are some who can follow it;\\
+They are the ones who can cross over\\
+That difficult ford of birth-and-death.”
 
+4\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and handed it down.
+{:#p4}
 
-</section>
-<section>
-<ol  id="en.4" start="4" class="verse en">
-<li class="en">
+### Notes
 
-“Rare are the people who can<br/>
+1. {:#n1}This sutra is reconstituted from a description after [SA 13.26](SA13_26.html){:target="_blank"} at 200b11. It’s parallel with [SN 45.34](https://suttacentral.net/sn45.34){:target="_blank"}, and [AN 10.117](https://suttacentral.net/an10.117){:target="_blank"} is also a Pali variant. [\[back\]](#ref1)
 
-Cross over to the other shore;<br/>
+---
 
-Everyone else in the world<br/>
+Translator: Charles Patton
+{:.translator}
+Last Revised: 11 September 2019
+{:.revised}
 
-Wander around on this shore.<br/>
-
-</li>
-</ol>
-
-
-
-</section>
-<section>
-<ol  id="en.5" start="5" class="verse en">
-<li class="en">
-
-Of this right teaching and discipline,<br/>
-
-There are some who can follow it;<br/>
-
-They are the ones who can cross over<br/>
-
-That difficult ford of birth-and-death.”<br/>
-
-</li>
-</ol>
-
-
-
-</section>
-<section><p id="en.1-6">After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and handed it down.</p>
-
-
-</section><h2>Endnotes</h2>
-<ol><li>This sutra is reconstituted from a description after <a href="SA13_26.html" target="_blank"><em>SA</em> 13.26</a> at 200b11. It’s parallel with <a href="https://suttacentral.net/sn45.34" target="_blank"><em>SN</em> 45.34</a>, and <a href="https://suttacentral.net/an10.117" target="_blank"><em>AN</em> 10.117</a> is also a Pali variant.</li></ol><section class="footer">
-<h5>Translator: Charles Patton<br/>Last Revised: 9-11-2019</h5>
-<hr/>
+---
